Add API integration and product listing; implement Zustand for state management and enhance UI components

--- a/src/constants/translations/en.json
+++ b/src/constants/translations/en.json
@@ -9,7 +9,8 @@
     "welcome": "Welcome",
     "featured_products": "Featured Products",
     "categories": "Categories",
-    "search_placeholder": "Search products..."
+    "search_placeholder": "Search products...",
+    "e_market": "E-Market"
   },
   "basket": {
     "empty": "Your cart is empty",
