--- a/src/constants/translations/tr.json
+++ b/src/constants/translations/tr.json
@@ -8,6 +8,7 @@
   "home": {
     "welcome": "Hoş Geldiniz",
     "featured_products": "Öne Çıkan Ürünler",
+    "e_market": "E-Market",
     "categories": "Kategoriler",
     "search_placeholder": "Ürün ara..."
   },
