Implement search functionality in home screen; add MainInput component and update styles for search results

--- a/src/constants/translations/en.json
+++ b/src/constants/translations/en.json
@@ -18,7 +18,10 @@
     "alreadyAddedToFavorites": "Already added to favorites",
     "inCart": "In Cart",
     "alreadyAddedToCart": "Already added to cart",
-    "removeFromCart": "Remove"
+    "removeFromCart": "Remove",
+    "searchProducts": "Search Products",
+    "noSearchResults": "No search results",
+    "clearSearch": "Clear Search"
   },
   "cart": {
     "addedToCart": "Product added to cart",
