--- a/src/constants/translations/tr.json
+++ b/src/constants/translations/tr.json
@@ -21,7 +21,8 @@
     "removeFromCart": "Çıkar",
     "searchProducts": "Ürün Ara",
     "noSearchResults": "Aradığınız ürün bulunamadı",
-    "clearSearch": "Aramayı Temizle"
+    "clearSearch": "Aramayı Temizle",
+    "noFilterResults": "Filtre kriterlerinize uygun ürün bulunamadı"
   },
   "cart": {
     "addedToCart": "Ürün sepete eklendi",
@@ -76,5 +77,17 @@
     "addresses": "Adreslerim",
     "settings": "Ayarlar",
     "logout": "Çıkış Yap"
+  },
+  "filter": {
+    "title": "Filtrele",
+    "priceRange": "Fiyat Aralığı",
+    "min": "Min",
+    "max": "Maks",
+    "brands": "Markalar",
+    "models": "Modeller",
+    "clear": "Temizle",
+    "apply": "Uygula",
+    "activeFilters": "Aktif Filtreler",
+    "clearFilters": "Filtreleri Temizle"
   }
 }
